# Lime

./: .gitignore  Cargo.toml  LICENSE  README.md  SKILL.md
src/: git_staleness.rs  main.rs  projects_registry.rs
src/annotations/: mod.rs
src/batman/: mod.rs
src/chunk/: mod.rs
src/commands/: mod.rs
src/config/: mod.rs
src/diagnostics/: mod.rs
src/embeddings/: mod.rs
src/format/: mod.rs
src/index/: mod.rs
src/links/: mod.rs
src/parse/: mod.rs
src/search/: mod.rs
src/storage/: mod.rs
