[package]
name = "lime"
version = "0.0.3"
edition = "2021"
description = "CLI indexer for AI coding agents"
license = "MIT"

[dependencies]
anyhow = "1.0"
dirs = "6"
blake3 = "1.5"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
regex = "1.11"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
syntect = "5"
walkdir = "2.5"
which = "7"
